web/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: roboshop
spec:
  type: LoadBalancer
  selector:
    app: web
    project: roboshop
    tier: web
  ports:
    - name: web
      protocol: TCP
      port: 80 # Service port
      targetPort: 80 # Container port
