web/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: roboshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test,Project=Roboshop
    alb.ingress.kubernetes.io/group.name: roboshop
spec:
  ingressClassName: alb
  rules:
    - host: "roboshop.projoy.store"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
